# dsb26-data-collection-and-preparation

./: README.md  SUMMARY.md  main.ipynb  pyproject.toml  requirements.txt  tools.py
data/: 1_clients.npz  1_products2024.npz  1_transactions2025.npz  2_clients.csv  2_products2024.xlsx  2_transactions2025.csv  3_dolar_clp_table2024.csv  3_merged_df.parquet  4_cleaned_df.parquet  5_optimized_df.parquet  6_final_df.parquet
