[project]
name = "dsb26-data-collection-and-preparation"
version = "0.1.0"
description = "Project on Data Collection and Preparation, part of module 3 of the 2026 Data Science Fundamentals bootcamp by Digital Talent for Chile - SENCE"
readme = "README.md"
requires-python = ">=3.12, <13"
dependencies = [
    "fastparquet==2025.12.0",
    "ipykernel==6.29.5",
    "jinja2==3.1.6",
    "lxml==6.0.2",
    "matplotlib==3.10.8",
    "numpy==2.4.2",
    "openpyxl==3.1.5",
    "pandas==3.0.0",
    "pyarrow==23.0.1",
    "python-dateutil==2.9.0.post0",
    "requests==2.32.5",
    "tzdata==2025.3",
]
